# taskpy

./: pyproject.toml
src/taskpy/: __init__.py  main.py
